--- a/lib/Module/CMakeLists.txt
+++ b/lib/Module/CMakeLists.txt
@@ -33,3 +33,11 @@ if ("${LLVM_PACKAGE_VERSION}" VERSION_EQUAL "3.3" OR
 endif()
 klee_get_llvm_libs(LLVM_LIBS ${LLVM_COMPONENTS})
 target_link_libraries(kleeModule PUBLIC ${LLVM_LIBS})
+target_link_libraries(kleeModule PRIVATE
+  kleeSupport
+  # FIXME:
+  # There is a circular dependency between `kleeModule` and `kleeCore`.
+  # `ModuleUtil.cpp` uses `klee::SpecialFunctionHandler` (in `kleeCore`) but
+  # `kleeCore` uses `kleeModule`.
+  kleeCore
+)
