CMake: support LLVMCC.ExtraFlags
With the old buildsystem we could pass CFLAGS when building runtime
libs. Support passing some additional flags to cmake-based system too.

We need this to build 32 and 64bit runtime libs separately (but not
whole klee).

Signed-off-by: Jiri Slaby <jslaby@suse.cz>

--- a/runtime/Makefile.cmake.bitcode.config.in
+++ b/runtime/Makefile.cmake.bitcode.config.in
@@ -41,7 +41,7 @@ MKDIR := mkdir
 RM := rm
 
 # Compiler flags
-LLVMCC.Flags += \
+LLVMCC.Flags += $(LLVMCC.ExtraFlags) \
 	-I@CMAKE_SOURCE_DIR@/include \
 	-I@CMAKE_BINARY_DIR@/include \
 	-emit-llvm \
