--- a/runtime/Makefile.cmake.bitcode.rules
+++ b/runtime/Makefile.cmake.bitcode.rules
@@ -154,7 +154,8 @@ debug_vars:
 	@echo "IS_RELEASE := $(IS_RELEASE)"
 	@echo "LOCAL_BUILD_DIR := $(LOCAL_BUILD_DIR)"
 	@echo "LLVMCC := $(LLVMCC)"
-	@echo "LLVMCC.Flag := $(LLVMCC.Flags)"
+	@echo "LLVMCC.Flags := $(LLVMCC.Flags)"
+	@echo "LLVMCC.ExtraFlags := $(LLVMCC.ExtraFlags)"
 	@echo "LLVMCC.Warnings := $(LLVMCC.Warnings)"
 	@echo "MODULE_FILE := $(MODULE_FILE)"
 	@echo "ROOT_OBJ := $(ROOT_OBJ)"
