[CMake] Fix linker warning about mixed linking modes when LLVM was built with `-fvisibility-inlines-hidden`.
This was observed when using a bottled version of LLVM 3.4 on macOS
that appears to have been built with this option.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -194,6 +194,7 @@ set(NEEDED_LLVM_VARS
   LLVM_INCLUDE_DIRS
   LLVM_LIBRARY_DIRS
   LLVM_TOOLS_BINARY_DIR
+  LLVM_ENABLE_VISIBILITY_INLINES_HIDDEN
   TARGET_TRIPLE
 )
 
@@ -209,6 +210,10 @@ if (LLVM_ENABLE_ASSERTIONS)
   set(ENABLE_KLEE_DEBUG 1) # for config.h
 else()
   unset(ENABLE_KLEE_DEBUG) # for config.h
+endif()
+
+if (LLVM_ENABLE_VISIBILITY_INLINES_HIDDEN)
+  list(APPEND KLEE_COMPONENT_CXX_FLAGS "-fvisibility-inlines-hidden")
 endif()
 
 
